# MetalQuiz

./: CMakeLists.txt  README.md
docs/: Doxyfile
docs/html/: _c_make_lists_8txt.html  _main_window_8cpp.html  _main_window_8hpp.html  _main_window_8hpp_source.html  _main_window_8ui.html  _page_widget_8cpp.html  _page_widget_8hpp.html  _page_widget_8hpp_source.html  _page_widget_8ui.html  _question_8hpp.html  _question_8hpp_source.html  _quiz_widget_8cpp.html  _quiz_widget_8hpp.html  _quiz_widget_8hpp_source.html  _quiz_widget_8ui.html  _r_e_a_d_m_e_8md.html  _result_widget_8cpp.html  _result_widget_8hpp.html  _result_widget_8hpp_source.html  _result_widget_8ui.html  _score_widget_8cpp.html  _score_widget_8hpp.html  _score_widget_8hpp_source.html  _score_widget_8ui.html  _style_8hpp.html  _style_8hpp_source.html  annotated.html  class_main_window-members.html  class_main_window.html  class_page_widget-members.html  class_page_widget.html  class_quiz_widget-members.html  class_quiz_widget.html  class_result_widget-members.html  class_result_widget.html  class_score_widget-members.html  class_score_widget.html  class_ui_1_1_main_window-members.html  class_ui_1_1_main_window.html  class_ui_1_1_page_widget-members.html  (+312 more)
docs/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  (+138 more)
resources/: questions.json  styles.qss
src/: Question.hpp  Style.hpp  main.cpp
src/quiz/: QuizWidget.cpp  QuizWidget.hpp  QuizWidget.ui
src/result/: ResultWidget.cpp  ResultWidget.hpp  ResultWidget.ui
src/window/: MainWindow.cpp  MainWindow.hpp  MainWindow.ui
(+12 files in other folders)
